[gd_scene load_steps=5 format=3 uid="uid://ccw7w52qemm3q"]

[ext_resource type="Script" uid="uid://brbdf76ki0yfy" path="res://scripts/GameReact.gd" id="1_qhx4h"]
[ext_resource type="AudioStream" uid="uid://l3dsfx4k8wyq" path="res://assets/se/maou_se_voice_human03.mp3" id="2_nstwc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhx4h"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nstwc"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="FlashReact" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhx4h")

[node name="LabelMensage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 81.5
offset_right = 20.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Texto"

[node name="ReactButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 158.0
offset_right = 50.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_qhx4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_nstwc")
text = "Reagir"

[node name="WaitTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nstwc")
bus = &"SFX"

[connection signal="pressed" from="ReactButton" to="." method="_on_react_button_pressed"]
